--- a/comp1238.md
+++ b/comp1238.md
@@ -1,1 +1,15 @@
-
+## Week 1 - History
+- Development of writing systems 
+- Role of writing in early civilizations.
+## Week 2 - Bits and Bytes
+ - Introduction to binary (1s and 0s).
+ - How data is stored and processed in digital form.
+## Week 3 - Text strecture 
+ - Importance of organizing ideas in a logical flow.
+ - Components: introduction, body, conclusion.
+## Week 4 - Keybords-and-editors 
+ - Evolution of typing tools (typewriters to modern keyboards).
+ - Features of text editors..
+## Week 5 - CLI Basics
+ - Command Line Interface (CLI).
+ - Key commands: cd, ls, and navigating files.
